# health-monitor-dashboard

./: .editorconfig  .env.example  .gitignore  LICENSE  Makefile  README.md  REPO_STRUCTURE.md  REPO_STRUCTURE.txt  docker-compose.yml  healthmonitor_PRD_only.md  healthmonitor_project_structure_only.md  healthmonitor_user_flow_only.md  package.json  pnpm-lock.yaml
.cursor/rules/: health-monitor-project.mdc
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: events.py  health.py  layers.py  regions.py  search.py  sources.py  translations.py
apps/api/app/core/: config.py  redis.py
apps/api/app/db/: seed.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 001_initial_schema.py
apps/api/app/ingestion/: __init__.py  promote.py  reset_events_and_raw.py  rss.py  run_who_ecdc.py
apps/api/app/models/: __init__.py  audit.py  event.py  event_join.py  ingestion.py  source.py  taxonomy.py  taxonomy_ref.py
apps/api/app/repositories/: event_repository.py
apps/api/app/schemas/: event.py
apps/web/: index.html  package.json  vite.config.ts
apps/worker/: __init__.py  pyproject.toml
apps/worker/worker/: __init__.py  celery_app.py
apps/worker/worker/tasks/: __init__.py  deduplicate.py  geocode.py  ingest.py  normalize.py  publish.py  summarize.py  translate.py
docs/: assumptions-phase1.md
docs/api/: endpoints.md
docs/architecture/: database-schema.md  implementation-plan.md  project-structure.md  technology-stack.md
docs/archives/: README.md  (+3 more)
(+43 files in other folders)
