[project]
name = "healthmonitor-worker"
version = "0.1.0"
description = "HealthMonitor Celery workers"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.26.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "geopy>=2.4.0",
    "openai>=1.0.0",
    "deepl>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-celery", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py312"
